Fixing scrolling navbar behavior on ios

--- a/src/styles/header.module.scss
+++ b/src/styles/header.module.scss
@@ -29,6 +29,37 @@ and (-webkit-min-device-pixel-ratio: 2) {
     }
 }
 
+/* For mobile phones, in landscape orientation */
+@media only screen
+and (min-device-width: 319px)
+and (max-device-width: 897px)
+and (orientation: landscape)
+and (-webkit-min-device-pixel-ratio: 2)
+and (-webkit-max-device-pixel-ratio: 3) {
+
+    .navbar-layout {
+        display: flex;
+        justify-content: center;
+    }
+
+    .responsive-collapse {
+        background-color: rgba(0, 0, 0, 0.0);
+        padding: 1rem auto;
+        margin-top: 0;
+        transition: none !important;
+    }
+
+    .logo {
+        max-width: 80px !important;
+        max-width:  80px !important;
+    }
+
+    .page-links {
+        letter-spacing: .1em;
+        font-size: .48em;
+    }
+}
+
 .page-link-selector {
     z-index: inherit;
 }
